camunda8/web-modeler/restapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-modeler-restapi
  labels:
    app: web-modeler-restapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-modeler-restapi
  template:
    metadata:
      labels:
        app: web-modeler-restapi
    spec:
      containers:
        - name: web-modeler-restapi
          image: registry.camunda.cloud/web-modeler-ee/modeler-restapi:8.4.18
          ports:
            - name: http
              containerPort: 8080
