camunda8/web-modeler/webapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-modeler-webapp
  labels:
    app: web-modeler-webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-modeler-webapp
  template:
    metadata:
      labels:
        app: web-modeler-webapp
    spec:
      containers:
        - name: web-modeler-webapp
          image: registry.camunda.cloud/web-modeler-ee/modeler-webapp:8.4.18
          ports:
            - name: http
              containerPort: 8080
