camunda8/web-modeler/websockets-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-modeler-websockets
  labels:
    app: web-modeler-websockets
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-modeler-websockets
  template:
    metadata:
      labels:
        app: web-modeler-websockets
    spec:
      containers:
        - name: web-modeler-websockets
          image: registry.camunda.cloud/web-modeler-ee/modeler-websockets:8.4.18
          ports:
            - name: http
              containerPort: 8080
